--- a/SpecFlowAllureNuget.Tests/packages.config
+++ b/SpecFlowAllureNuget.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Allure.Commons" version="2.2.0.7" targetFramework="net462" />
-  <package id="Microsoft.CodeCoverage" version="1.0.3" targetFramework="net462" />
+  <package id="CsvHelper" version="6.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net462" />
@@ -10,11 +10,11 @@
   <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.NET.Test.Sdk" version="15.5.0" targetFramework="net462" />
-  <package id="Microsoft.TestPlatform.TestHost" version="15.5.0" targetFramework="net462" />
   <package id="MimeTypesMap" version="1.0.2" targetFramework="net462" />
+  <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net462" />
+  <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
-  <package id="NUnit" version="3.8.1" targetFramework="net462" />
-  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
+  <package id="SpecFlow" version="2.2.1" targetFramework="net462" />
+  <package id="SpecFlow.Allure" version="2.2.0.10" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
 </packages>
