--- a/nuget.config
+++ b/nuget.config
@@ -1,7 +1,13 @@
 ﻿<configuration>
   <config>
     <!-- <add key="dependencyVersion" value="Highest" /> -->
-     <add key="globalPackagesFolder" value="packages" /> 
+     
+    <!--<add key="globalPackagesFolder" value="packages" />--> 
+    
     <!--<add key="repositoryPath" value="packages" />-->
   </config>
+  <packageSources>
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="Test Source" value=".\Allure.Commons\bin\Debug" />
+  </packageSources>
 </configuration>
