--- a/nuget.config
+++ b/nuget.config
@@ -1,10 +1,6 @@
 ﻿<configuration>
   <config>
-    <!-- <add key="dependencyVersion" value="Highest" /> -->
-     
-    <!--<add key="globalPackagesFolder" value="packages" />--> 
-    
-    <!--<add key="repositoryPath" value="packages" />-->
+    <add key="globalPackagesFolder" value="packages" />
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
