--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -15,12 +15,21 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
+  displayName: 'Set Assembly Manifest Data'
+  inputs:
+    GeneratePackageOnBuild: true
+    VersionNumber: '$(Build.BuildNumber)'
+    FileVersionNumber: '$(Build.BuildNumber)'
+    InformationalVersion: '$(Build.BuildNumber)'
+    PackageVersion: '$(Build.BuildNumber)'
 - task: NuGetToolInstaller@1
+  enabled: true
   displayName: 'Use NuGet'
   inputs:
     checkLatest: true
 - task: NuGetCommand@2
-  enabled: false
+  enabled: true
   displayName: 'NuGet restore'
   inputs:
     restoreSolution: '$(solution)'
