--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -1,8 +1,4 @@
-# ASP.NET Core (.NET Framework)
-# Build and test ASP.NET Core projects targeting the full .NET Framework.
-# Add steps that publish symbols, save build artifacts, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
+name: $(Date:3.5.0)$(Rev:.r)
 trigger:
 - master
 
@@ -38,5 +34,5 @@ steps:
   inputs:
     command: 'test'
     projects: '**/Allure.Commons.Tests.csproj'
-    arguments: '-c $(buildConfiguration)'
+    arguments: '-c $(buildConfiguration) --no-restore'
 
