--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -39,6 +39,7 @@ steps:
 
 - task: DotNetCoreCLI@2
   displayName: Run SpecFlow features
+  continueOnError: true
   inputs:
     command: 'test'
     projects: '**/Allure.Features.csproj'
