--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -43,3 +43,16 @@ steps:
     projects: '**/Allure.SpecFlowPlugin.Tests.csproj'
     arguments: '-c $(buildConfiguration) --no-restore'
     publishTestResults: true
+
+- task: AzureCLI@1
+  displayName: 'Generate allure report'
+  inputs:
+    azureSubscription: 'AlexB (3b78fad5-1e95-4a49-87b8-6a11dcc91996)'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      mkdir allure-results/history
+      az storage blob download-batch --account-name allure --account-key $(AZURE_KEY) -s $web -d allure-results/ --pattern history/*
+      npm install allure-commandline -g
+      allure generate
+      az storage blob upload-batch --account-name allure --account-key $(AZURE_KEY) -d $web -s ./allure-report
+    workingDirectory: 'Allure.Features/bin/netcoreapp3.1'
