--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -44,13 +44,14 @@ steps:
     arguments: '-c $(buildConfiguration) --no-restore'
     publishTestResults: true
 
-- task: AzureCLI@1
-  displayName: 'Generate allure report'
+- task: AzureCLI@2
+  displayName: 'Generate Allure report'
   inputs:
     azureSubscription: 'AlexB (3b78fad5-1e95-4a49-87b8-6a11dcc91996)'
+    scriptType: 'pscore'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      mkdir 'allure-results/history'
+      mkdir allure-results/history
       az storage blob download-batch --account-name allure --account-key $(AZURE_KEY) -s $web -d allure-results/ --pattern history/*
       npm install allure-commandline -g
       allure generate
