--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -61,8 +61,18 @@ steps:
     ArtifactName: 'drop'
     publishLocation: 'Container'
 
+- task: NuGetCommand@2
+  enabled: true
+  condition: and(succeeded(), eq(variables.isMaster, true))
+  displayName: Push packages
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.*nupkg'
+    nuGetFeedType: 'external'
+    publishFeedCredentials: 'AlexBakanov'
+
 - task: AzureCLI@2
-  enabled: false
+  enabled: true
   displayName: 'Generate Allure report'
   condition: and(succeeded(), eq(variables.isMaster, true))
   inputs:
@@ -76,4 +86,3 @@ steps:
       allure generate
       az storage blob upload-batch --account-name allure --account-key $(AZURE_KEY) -d '$web' -s ./allure-report
     workingDirectory: 'Allure.Features/bin/netcoreapp3.1'
-
