--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,31 +30,31 @@ jobs:
           git config --global user.email qameta-ci@qameta.io
       - name: "Set release version"
         run: |
-          sed -i -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.releaseVersion }}</Version>|g' ./Allure.Net.Commons/Allure.Net.Commons.csproj
+          sed -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.releaseVersion }}</Version>|g' -i .backup ./Allure.Net.Commons/Allure.Net.Commons.csproj
           cat ./Allure.Net.Commons/Allure.Net.Commons.csproj
-          sed -i -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.releaseVersion }}</Version>|g' ./Allure.SpecFlowPlugin/Allure.SpecFlowPlugin.csproj
+          sed -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.releaseVersion }}</Version>|g' -i .backup ./Allure.SpecFlowPlugin/Allure.SpecFlowPlugin.csproj
           cat ./Allure.SpecFlowPlugin/Allure.SpecFlowPlugin.csproj
-#      - name: "Commit release version and create tag"
-#        run: |
-#          git commit -am "release ${{ github.event.inputs.releaseVersion }}"
-#          git tag ${{ github.event.inputs.releaseVersion }}
-#          git push origin ${{ github.event.inputs.releaseVersion }}
+      - name: "Commit release version and create tag"
+        run: |
+          git commit -am "release ${{ github.event.inputs.releaseVersion }}"
+          git tag ${{ github.event.inputs.releaseVersion }}
+          git push origin ${{ github.event.inputs.releaseVersion }}
       - name: "Set next development version"
         run: |
-          sed -i -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.nextVersion }}-SNAPSHOT</Version>|g' ./Allure.Net.Commons/Allure.Net.Commons.csproj
+          sed -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.nextVersion }}-SNAPSHOT</Version>|g' -i .backup ./Allure.Net.Commons/Allure.Net.Commons.csproj
           cat ./Allure.Net.Commons/Allure.Net.Commons.csproj
-          sed -i -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.nextVersion }}-SNAPSHOT</Version>|g' ./Allure.SpecFlowPlugin/Allure.SpecFlowPlugin.csproj
+          sed -e '/<PropertyGroup>/,/<\/PropertyGroup>/ s|<Version>[0-9a-z.]*</Version>|<Version>${{ github.event.inputs.nextVersion }}-SNAPSHOT</Version>|g' -i .backup ./Allure.SpecFlowPlugin/Allure.SpecFlowPlugin.csproj
           cat ./Allure.SpecFlowPlugin/Allure.SpecFlowPlugin.csproj
-#      - name: "Commit next development version and push it"
-#        run: |
-#          git commit -am "set next development version ${{ github.event.inputs.nextVersion }}"
-#          git push origin ${{ github.ref }}
-#      - name: "Publish Github Release"
-#        uses: octokit/request-action@v2.x
-#        with:
-#          route: POST /repos/${{ github.repository }}/releases
-#          tag_name: ${{ github.event.inputs.releaseVersion }}
-#          generate_release_notes: true
-#          target_commitish: ${{ github.ref }}
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.QAMETA_CI }}
+      - name: "Commit next development version and push it"
+        run: |
+          git commit -am "set next development version ${{ github.event.inputs.nextVersion }}"
+          git push origin ${{ github.ref }}
+      - name: "Publish Github Release"
+        uses: octokit/request-action@v2.x
+        with:
+          route: POST /repos/${{ github.repository }}/releases
+          tag_name: ${{ github.event.inputs.releaseVersion }}
+          generate_release_notes: true
+          target_commitish: ${{ github.ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.QAMETA_CI }}
