--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,8 +32,8 @@ jobs:
       - name: 'Pack project'
         run: dotnet pack ${{ env.SOLUTION_PATH }} --no-restore --no-build --configuration ${{ env.BUILD_CONFIGURATION }} --include-symbols -p:PackageOutputPath=${{ env.PACKAGE_OUTPUT_PATH }}
 
-#      - name: 'NuGet publish'
-#        run: |
-#          dotnet nuget push "./**/*.nupkg" -k ${NUGET_TOKEN} -s https://api.nuget.org/v3/index.json
-#        env:
-#          NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
+      - name: 'NuGet publish'
+        run: |
+          dotnet nuget push "./**/*.nupkg" -k ${NUGET_TOKEN} -s https://api.nuget.org/v3/index.json
+        env:
+          NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
